assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700&family=Passions+Conflict:wght@100;200;300;400;500;600;700&family=Lora:wght@100;200;300;400;500;600;700&display=swap');

html, body {
    overflow-x:hidden 
  } 

/*---------------------------------Navbar*/

.navbar-custom {
    background: #be9b2b;
}

.navbar-links a{
    color: #bb6707;
}

/*--------------------------------Hero Image Section*/ 

.heroimage-container {
    height: 80vh;
    background: url("../images/Hero\ Image.jpg") no-repeat bottom right; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.hero-title {
    font-size: 14vmin;
    color: #d6d6d6;
    font-weight: 300;
    text-align: left;
    font-family: "Passions Conflict", sans-serif;
    position: relative;
    margin: 0%;
    padding-left: 8%;
}

.hero-col {
    margin: 0%;
    padding: 0%;
}

.hero-sub {
    position: absolute;
    bottom: 15rem;
    text-align: center;
}

.sub-box {
    background-color: rgba(79, 80, 85, 0.575);
    border-radius: 10px 10px;
    display: inline-block;
    padding: 8px;
    text-align: center;
    color: #d6d6d6;
}

.btn-primary {
    padding: .5rem 1rem;
    font-size: 12px;
    font-family: "exo", sans-serif;
    line-height: 1;
    border-radius: 8px;
    border-width: 1px;
    border-color: #000000;
    background-color: #bb6707;
}

.background-wrapper {
    position: absolute;
    top: 56px;
    left: 0;
    height: 80vh;
    width: 100%;
    background-color: rgba(0,0,0,0.5);
}

/*---------------------------------------------feature*/

.feature-head {
    height: 100%;
    margin-top: 0px;
    margin-bottom: 15px;
    padding: 10px;
    text-align: center;
}

.feature-br {
    margin: 8px;
    border-style: dashed;
    border-width: 1px;
}

.feature-box {
    background-color: rgba(79, 80, 85, 0.575);
    margin: 0px;
    border-radius: 10px 10px;
    display: inline-block;
    text-align: center;
    color: #d6d6d6;
}

.band-feature {
    background: #a58869;
}

.band-feature .row {
    padding: 5px 15px 25px 15px;
}

/*---------------------------------------------footer*/

footer {
    height: 100%;
    margin: 0;
    padding: 5px;
    background: #be9b2b;
}

.soc-med-foot {
    font-size: 28px;
    text-align: center;
}

.soc-med-foot a {
    padding-right: 20px;
    color: #bb6707;
}

.soc-med-foot p {
    font-size: 22px;
    margin: 0;
}

.footer-button {
    vertical-align: 50%;
    position: relative;
    bottom: 8px;
    
}

.foot-butt-title {
    font-size: 22px;
    text-align: center;
    margin: 0;
}
/*---------------------------------------------Special paddings/margins/text*/

p {
    font-family: "exo", sans-serif;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: "Lora", sans-serif;
}

